--- a/sem 8/todo
+++ b/sem 8/todo
@@ -1,2 +1,3 @@
 1) in readDataset change the second attribute of prefs from bookName to bookId
 2) cosine score
+3) commit the required changes and then compare the results
